mountall (0.1.8~) UNRELEASED; urgency=low

  * Further work on the fix from the previous version where the root
    filesystem would always be considered "local", retain that from the
    POV of the {virtual,local,remote}-filesystems events, but do mount
    the root straight away when it's virtual since there's no device to
    wait until it's ready.  LP: #431204.
  * If a remote filesystem is already mounted and doesn't need a remount,
    don't wait for a network device to come up.  LP: #430348.

  * Ignore single and double quotes in fstab device specifications, since
    mount -a used to.  LP: #431064.
  * Never write mtab when mounting a mount with showthroughs (ie. /var)
    and instead update mtab once we've moved it into place
    later.  LP: #434172.

 -- Scott James Remnant <scott@ubuntu.com>  Mon, 21 Sep 2009 12:15:33 -0700

mountall (0.1.7) karmic; urgency=low

  * Build with -O2 on powerpc to work around wrong-code generation with -Os.
    LP: #432222.

 -- Matthias Klose <doko@ubuntu.com>  Tue, 22 Sep 2009 00:31:52 +0200

mountall (0.1.6) karmic; urgency=low

  [ Scott James Remnant ]
  * Restored mistakenly removed dh_installchangelogs & dh_installdocs.

  * Allow a further udev event for a block-device to retry swapon/mount
    after fsck has been already been completed for a prior event.
  * Massively reduce the pickyness of mountall when it comes to block
    devices; only expect ID_FS_USAGE and ID_FS_TYPE for dm and md devices,
    and don't actually expect the values.  For most people this won't make
    a difference, since we use UUID= anyway.  But for people with hardcoded
    /dev/sda1 in their fstab, which has multiple metadata, this won't break
    their boot.

  * Only include FHS filesystems in the {virtual,local,remote}-filesystems
    events.  This prevents an unmountable entry in fstab blocking things like
    starting D-Bus or the Network which are required to mount that filesystem.
    LP: #430880.